demo/metaprotocol-trpc/trpc-sample.yaml
# Copyright Aeraki Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-sample-server-v1
  labels:
    app: trpc-sample-server
spec:
  selector:
    matchLabels:
      app: trpc-sample-server
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm-debug:1.2.1
      labels:
        app: trpc-sample-server
        version: v1
    spec:
      containers:
        - name: trpc-sample-server
          image: aeraki/trpc-server
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-sample-server-v2
  labels:
    app: trpc-sample-server
spec:
  selector:
    matchLabels:
      app: trpc-sample-server
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm-debug:1.2.1
      labels:
        app: trpc-sample-server
        version: v2
    spec:
      containers:
        - name: trpc-sample-server
          image: aeraki/trpc-server
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-sample-client-unary
  labels:
    app: trpc-sample-client-unary
spec:
  selector:
    matchLabels:
      app: trpc-sample-client-unary
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm-debug:1.2.1
      labels:
        app: trpc-sample-client-unary
    spec:
      containers:
        - name: trpc-sample-client
          image: aeraki/trpc-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-sample-client-client-stream
  labels:
    app: trpc-sample-client-client-stream
spec:
  selector:
    matchLabels:
      app: trpc-sample-client-client-stream
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm-debug:1.2.1
      labels:
        app: trpc-sample-client-client-stream
    spec:
      containers:
        - name: trpc-sample-client
          image: aeraki/trpc-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-sample-client-server-stream
  labels:
    app: trpc-sample-client-server-stream
spec:
  selector:
    matchLabels:
      app: trpc-sample-client-server-stream
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm-debug:1.2.1
      labels:
        app: trpc-sample-client-server-stream
    spec:
      containers:
        - name: trpc-sample-client
          image: aeraki/trpc-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trpc-sample-client-bidirection-stream
  labels:
    app: trpc-sample-client-bidirection-stream
spec:
  selector:
    matchLabels:
      app: trpc-sample-client-bidirection-stream
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm-debug:1.2.1
      labels:
        app: trpc-sample-client-bidirection-stream
    spec:
      containers:
        - name: trpc-sample-client
          image: aeraki/trpc-client
---
apiVersion: v1
kind: Service
metadata:
  name: trpc-sample-server
spec:
  selector:
    app: trpc-sample-server
  ports:
    - name: tcp-metaprotocol-trpc-server
      protocol: TCP
      port: 8000
      targetPort: 8000
